k8s_init/yaml/jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      imagePullSecrets:
        - name: harbor
      containers:
        - name: jenkins
          image: myharbor.com/public/jenkins/jenkins:lts
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 1Gi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: maven-home
              mountPath: /usr/local/maven
            - name: jdk-home
              mountPath: /home/dahantc/jdk1.8.0_321
            - name: k8s-home
              mountPath: /home/k8s/
            - name: k8s-config
              mountPath: /root/.kube/config
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/bash",
                    "/home/k8s/k8s_init/k8s_init/yaml/jenkins/prep_jenkins_env.sh",
                  ]
      volumes:
        - name: jenkins-home
          hostPath:
            path: /var/jenkins_home
            type: Directory
        - name: maven-home
          hostPath:
            path: /usr/local/maven
            type: Directory
        - name: jdk-home
          hostPath:
            path: /home/dahantc/jdk1.8.0_321
            type: Directory
        - name: k8s-home
          hostPath:
            path: /home/k8s/
            type: Directory
        - name: k8s-config
          hostPath:
            path: /root/.kube/config
            type: File
      dnsConfig:
        nameservers:
          - 223.5.5.5
